# mb2025

./: .gitignore  README.md
csharp/: Calculator.cs  Program.cs  README.md  TaskManager.cs  build.txt
java/: Category.java  CopilotTutorialMain.java  InventoryManager.java  Product.java  README.md  build.txt
javascript/: README.md  build.md  demo.html  dom-manipulation.js  express-api.js  index.html  package.json  styles.css
python/: README.md  data_analysis.py  flask_api.py  machine_learning.py  simple_test.py
rust/: Cargo.toml  README.md  build.md
rust/src/: calculator.rs  file_processor.rs
typescript/: README.md  build.md  calculator.ts  express-api.ts  package.json  tsconfig.json
